[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Friend/Friend.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Tutorial/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Tutorial/Assets/preview_card_tutorial.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Tutorial/Assets/zoom_tutorial.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Tutorial/Assets/find_friend_tutorial.png" type="Texture" id=6]
[ext_resource path="res://Assets/JazzInterlude.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 56 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 3 )

[node name="Level" parent="." instance=ExtResource( 1 )]
randomly_spawn = false
is_tutorial = true

[node name="Friend2" parent="Level" instance=ExtResource( 2 )]
position = Vector2( 515, 312 )
scale = Vector2( 4, 4 )

[node name="FriendPreviewTutorial" type="Area2D" parent="Level"]
position = Vector2( 156, 494 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/FriendPreviewTutorial"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="FindFriendTutorial" type="CanvasLayer" parent="Level"]

[node name="FindFriendTutorialInstructions" type="TextureRect" parent="Level/FindFriendTutorial"]
visible = false
margin_left = 720.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 160.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewCardTutorial" type="Control" parent="."]
margin_left = 208.0
margin_top = 417.0
margin_right = 504.0
margin_bottom = 561.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PreviewCardTutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -57.0
margin_right = 150.0
margin_bottom = 57.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomTutorial" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ZoomTutorial"]
margin_left = 640.0
margin_top = 432.0
margin_right = 920.0
margin_bottom = 552.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="mouse_entered" from="Level/FriendPreviewTutorial" to="." method="_on_FriendPreviewTutorial_mouse_entered"]
